--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>This is a web page template</title>
+        <title>This is a web page template with a small change</title>
 
     </head>
     <body>
